--- a/src/chat/threads.scss
+++ b/src/chat/threads.scss
@@ -32,7 +32,7 @@
 	.icon__54b20 {
 		color: $high;
 		path:first-child {
-			visibility: hidden;
+			//visibility: hidden; TODO; fix whatever this is
 		}
 	}
 }
